fix: avatar sizing and cropping

--- a/assets/css/features/sidebar.scss
+++ b/assets/css/features/sidebar.scss
@@ -63,6 +63,7 @@
 
 .hsb--avatar {
     padding-bottom: 20px;
+    object-fit: contain;
 }
 
 .hsb--paragraph {
@@ -86,7 +87,7 @@
 @media screen and (max-width: 1100px) {
     .hsb--avatar-image {
         width: 140px;
-        height: auto;
+        height: 140px;
     }
 }
 
